{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "dbe848b6-ecf0-94cb-8eb6-5f132dba9881",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server-ca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040659f19dd333555",
            "arn": "arn:aws:ec2:us-east-2:203518068312:instance/i-0b6d06846ed55082a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6d06846ed55082a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "windows-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05efbf4f7f5192b55",
            "private_dns": "ip-10-11-1-53.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.53",
            "public_dns": "ec2-3-144-78-223.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.78.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-2:203518068312:key/74994308-0c5d-445f-872b-5355fd36b037",
                "throughput": 0,
                "volume_id": "vol-0226490a73d6a2503",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07829f47d42b9f216",
            "tags": {
              "Environment": "test",
              "Name": "windows-server-ca"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "windows-server-ca"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d7849985aa1dbba"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-server",
            "data.template_file.windows-ca-userdata",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server-dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040659f19dd333555",
            "arn": "arn:aws:ec2:us-east-2:203518068312:instance/i-0d640898d3157e437",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0d640898d3157e437",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "windows-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "password_data": "uCBS6lCQ/BnUTN1yq5AW5nzmKtf6WxYdAz7bGAPMpHsHcz6sXd0dI+zd58/cxReFLTmgOlyhzXuzUpZacVgTnKPYStLH9RPfs+GcVihEqWsWN6tVpbYk8CdOfrwymBdgLtjJwJJkWarIDbWszgtFSUuHaISEhb2hLqKd3a4gTy46u9Q2XjFl4nNuPo57ERJu+wTt0SrBMFPnDT3KhrHDGWM0fa0GRcHnaSZVh8c90L8ngeWmM2wSuLtXZhFRjpeFEeowEEEjdFL87sSUe6F5W6t+pJ/hp4RPROaVDXP9qHxP/8dr/PL6qxc89gThnGCv8CN+sxmsVL77nDVuEqtmXRYLqIB8YK/S5wpwow+D70gJrBQlJB2YU54Oj3UDsbkQ1H6agY81K2RbvbAbDxH9JU0R5A+kJ0127KHelr3bFEhiGIcBZKm8uZAgMea7c3lnvC2k7StgImF3CCvfCtR2nc [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d9a8a13d9b95bde",
            "private_dns": "ip-10-11-1-131.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.131",
            "public_dns": "ec2-18-222-28-130.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.28.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-2:203518068312:key/74994308-0c5d-445f-872b-5355fd36b037",
                "throughput": 0,
                "volume_id": "vol-0104d7c4c9243fd02",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07829f47d42b9f216",
            "tags": {
              "Environment": "test",
              "Name": "windows-server-dc"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "windows-server-dc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d7849985aa1dbba"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-server",
            "data.template_file.windows-dc-userdata",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server-member",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa6784ed30b62c4",
            "arn": "arn:aws:ec2:us-east-2:203518068312:instance/i-04031b27a3ba436c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04031b27a3ba436c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "windows-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ae79d2e60c6215d",
            "private_dns": "ip-10-11-1-35.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.35",
            "public_dns": "ec2-18-218-89-6.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.89.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-2:203518068312:key/74994308-0c5d-445f-872b-5355fd36b037",
                "throughput": 0,
                "volume_id": "vol-0a6e005efaefc9a58",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07829f47d42b9f216",
            "tags": {
              "Environment": "test",
              "Name": "windows-server-member-0"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "windows-server-member-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d7849985aa1dbba"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-member-server",
            "data.template_file.windows-member-userdata",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa6784ed30b62c4",
            "arn": "arn:aws:ec2:us-east-2:203518068312:instance/i-0cd01583602819f6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd01583602819f6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "windows-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0068ae2251b69d15f",
            "private_dns": "ip-10-11-1-196.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.196",
            "public_dns": "ec2-3-134-95-131.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.95.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-2:203518068312:key/74994308-0c5d-445f-872b-5355fd36b037",
                "throughput": 0,
                "volume_id": "vol-096ecda1ccd4bfbbd",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07829f47d42b9f216",
            "tags": {
              "Environment": "test",
              "Name": "windows-server-member-1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "windows-server-member-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d7849985aa1dbba"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-member-server",
            "data.template_file.windows-member-userdata",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:internet-gateway/igw-05e12b6f0a37eaa85",
            "id": "igw-05e12b6f0a37eaa85",
            "owner_id": "203518068312",
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:route-table/rtb-0d1f11c766fa57cb4",
            "id": "rtb-0d1f11c766fa57cb4",
            "owner_id": "203518068312",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:route-table/rtb-074f70cd0a432c43b",
            "id": "rtb-074f70cd0a432c43b",
            "owner_id": "203518068312",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e12b6f0a37eaa85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "perf-crta-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c0d21e445035a1",
            "route_table_id": "rtb-0d1f11c766fa57cb4",
            "subnet_id": "subnet-0d3ef5918a398bca3"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba8a631785ed3d3",
            "route_table_id": "rtb-074f70cd0a432c43b",
            "subnet_id": "subnet-07829f47d42b9f216"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-windows-private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:security-group/sg-07415e442f9a145b6",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07415e442f9a145b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow All Connections From VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "windows-private-sg",
            "name_prefix": "",
            "owner_id": "203518068312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-private-sg"
            },
            "tags_all": {
              "Name": "windows-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-windows-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:security-group/sg-01d7849985aa1dbba",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d7849985aa1dbba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming connections from me",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow All Connections From VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "windows-sg",
            "name_prefix": "",
            "owner_id": "203518068312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-sg"
            },
            "tags_all": {
              "Name": "windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:subnet/subnet-0d3ef5918a398bca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3ef5918a398bca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203518068312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:subnet/subnet-07829f47d42b9f216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07829f47d42b9f216",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203518068312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0917efaac1a2a05ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203518068312:vpc/vpc-0917efaac1a2a05ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0365df445a3aa1293",
            "default_route_table_id": "rtb-06809c50a199ff3c9",
            "default_security_group_id": "sg-09d6d5ec3c5bcaa65",
            "dhcp_options_id": "dopt-cf872aa6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0917efaac1a2a05ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06809c50a199ff3c9",
            "owner_id": "203518068312",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}